--- a/bootstrap-margin-padding.html
+++ b/bootstrap-margin-padding.html
@@ -12,29 +12,34 @@
 <body>
 
 
-    <div class="d-inline p-2 text-bg-primary">d-inline</div>
-    <div class="d-inline p-2 text-bg-dark">d-inline</div>
-    <hr>
+
     <!-- 嘗試同時設定row & container -->
-    <div class="container text-center">
+    <div class="container text-center mb-5">
         <div class="row">
-            <div class="col col-sm-8 col-md-3 col-lg-10 col-xl-1 col-xxl-6 bg-dark text-light">
+            <div class="col col-sm-8 col-md-3 col-lg-10 col-xl-1 col-xxl-6 p-2 bg-dark text-light">
                 1 of 2
             </div>
-            <div class="col col-sm-4 col-md-9 col-lg-2 col-xl-11 col-xxl-6 bg-danger text-light">
+            <div class="col col-sm-4 col-md-9 col-lg-2 col-xl-11 col-xxl-6 p-2 bg-danger text-light">
                 2 of 2
             </div>
         </div>
     </div>
-
-    <hr>
-
-
-    <!-- test -->
-    <div class="row bg-black" style="width: 600px;">
-        <img src="./img/pic-sm.jpg" alt="" class="col-6 p-2">
-        <img src="./img/pic-md.jpg" alt="" class="col-6 p-2">
-        <img src="./img/pic-xl.jpg" alt="" class="col-12 p-2">
+    <!-- margin & padding -->
+    <!-- 
+        m-margin
+        p-padding
+        t-top
+        b-bottom
+        s-(start)left
+        e-(end)right
+        x-(x-axis)left & right
+        y-(y-axis)top & bottom
+     -->
+    <div class="d-inline m-2 p-2 bg-dark text-light">
+        1 of 2
+    </div>
+    <div class="d-inline p-3 bg-danger text-light">
+        2 of 2
     </div>
 
 
