--- a/20231206/bootstrap-HW.html
+++ b/20231206/bootstrap-HW.html
@@ -12,6 +12,10 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
         .wrap {
             width: 100vw;
             height: 100vh;
