--- a/20231207/bootstrap-HW.html
+++ b/20231207/bootstrap-HW.html
@@ -23,6 +23,13 @@
             background-repeat: no-repeat;
             background-position: center;
         }
+        
+        .nav-link:hover{
+            background-color: #0ab;
+            color: #fff !important;
+            /* border-radius: 10px; */
+            transition: 1s;
+        }
 
         @media (min-width: 576px) {
             .col-img {
@@ -70,37 +77,11 @@
 
 
 
-    <div class="container-fluid vw-100 vh-100 p-0 bg-secondary-subtle">
+    <div class="container-fluid vw-100 vh-100 p-0 ">
         <div class="row w-100 h-100 m-0 flex-column flex-xl-row position-relative">
-            <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid flex-sm-row-reverse">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <img src="../20231206/img/avatar.jpg" alt="Bootstrap" width="90" height="90"
-                        class="border rounded-circle">
-                    <div class="fake-area d-sm-none">AAAAA</div>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav> -->
+
             <nav class="navbar navbar-expand-lg bg-body-tertiary align-items-xl-start pt-xl-5 bg-primary-subtle">
-                <div class="container-fluid flex-xl-column">
+                <div class="container-fluid flex-xl-column px-md-4">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -109,15 +90,15 @@
                         class="img-avatar border rounded-circle mb-xl-5">
                     <div class="fake-area d-lg-none">AAAAA</div>
                     <div class="collapse navbar-collapse flex-lg-row-reverse" id="navbarNav">
-                        <ul class="navbar-nav  flex-xl-column">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <ul class="navbar-nav  flex-xl-column text-center">
+                            <li class="nav-item  mb-2">
+                                <a class="nav-link border rounded-2 text-secondary fs-5" href="#">Home</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
+                            <li class="nav-item  mb-2">
+                                <a class="nav-link border rounded-2 text-secondary fs-5" href="#">Features</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Pricing</a>
+                            <li class="nav-item ">
+                                <a class="nav-link border rounded-2 text-secondary fs-5" href="#">Pricing</a>
                             </li>
 
                         </ul>
