--- a/20231207/weather-card-js.html
+++ b/20231207/weather-card-js.html
@@ -143,8 +143,8 @@
         // 宣告地區陣列
         const locArr = [
             ['全台'],
-            ['臺北市', '新北市', '基隆市', '新竹市', '桃園市', '新竹縣', '宜蘭縣'],
-            ['臺中市', '苗栗縣', '彰化縣', '南投縣', '雲林縣'],
+            [ '基隆市','臺北市', '新北市', '桃園市', '新竹縣', '新竹市', '宜蘭縣'],
+            ['苗栗縣', '臺中市', '彰化縣', '南投縣', '雲林縣'],
             ['高雄市', '臺南市', '嘉義市', '嘉義縣', '屏東縣', '澎湖縣'],
             ['花蓮縣', '臺東縣'],
             ['金門縣', '連江縣'],
