feat fetch weather api

--- a/20231207/weather-card-js.html
+++ b/20231207/weather-card-js.html
@@ -176,7 +176,7 @@
                         // 移除後個別tab在新增CSS，結合上方移除功能達到切換頁籤換色效果。
                         tab.classList.add('tab-active');
 
-                        //*** 先清空效果在長出新內容***(詢問老師為何使用+=依舊會蓋過之前的內容)
+                        //*** 先清空效果在長出新內容***
                         locCard.innerHTML = '';
 
                         // console.log(locArr[tabIndex]);
