--- a/20231207/weather-card-bootstrap.html
+++ b/20231207/weather-card-bootstrap.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>weather-card-bootstrap</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -97,21 +97,17 @@
         ];
 
         fetch('https://opendata.cwa.gov.tw/api/v1/rest/datastore/F-C0032-001?Authorization=CWA-2497FEFB-378D-4EE8-B9BE-C99ACEB8E680')
-            .then((res) => {
-                return res.json();
-            }).then((data) => {
+        .then((res) => {
+            return res.json();
+        }).then((data) => {
 
-
-
-                //tabs 事件監聽
-                navs.forEach((nav, navIndex) => {
-                    tabContents[navIndex].innerHTML = '';
-                    buildContent(data, navIndex);
-                });
-
-
-
+            //tabs 事件監聽
+            navs.forEach((nav, navIndex) => {
+                tabContents[navIndex].innerHTML = '';
+                buildContent(data, navIndex);
             });
+
+        });
 
 
 
@@ -125,7 +121,8 @@
                 const rain = element.weatherElement[1];
                 const minTemp = element.weatherElement[2];
                 const feel = element.weatherElement[3];
-                const maxTemp = element.weatherElement[4];    
+                const maxTemp = element.weatherElement[4];
+                console.log(weather.time);    
                 if (locArr[index].includes('全台') || locArr[index].includes(locationName)) {
                     tabContents[index].innerHTML += `
                     <h1 class="text-center text-light fw-bold">${locationName}</h1>
@@ -133,41 +130,77 @@
                         <div class="card-content d-flex gap-5 mb-3 mb-3 px-5 py-3 border-5 border-bottom rounded-top-3 border-primary-subtle  bg-light">
                             <div class="card-content-left">
                                 <h3 class="fw-bolder">今日白天</h3>
-                                <p class="temperature">15~22℃</p>
-                                <p class="feel">舒適</p>
-                                <p class="rainy">降雨機率:10%</p>
+                                <p class="temperature m-0">
+                                    ${minTemp.time[0].parameter.parameterName}~
+                                    ${maxTemp.time[0].parameter.parameterName}℃</p>
+                                <p class="feel m-0">${feel.time[0].parameter.parameterName}</p>
+                                <p class="rainy">降雨機率: ${rain.time[0].parameter.parameterName}%</p>
                             </div>
-                            <div class="pic ms-2">
-                                <img src="../20231206/img/avatar.jpg" alt="" class="my-2" style="width: 130px;">
+                            <div class="pic ms-2 d-flex align-content-center">
+                                <img src="${changeImg(weather.time[0].parameter.parameterName)}" alt="${changeImg(weather.time[0].parameter.parameterName)}"  style="height: 90px;">
                             </div>
                         </div>
-                        <div class="card-content d-flex gap-5 mb-3 px-5 py-3 border-5 border-bottom rounded-top-3 border-primary-subtle bg-light">
+                        <div class="card-content d-flex gap-5 mb-3 mb-3 px-5 py-3 border-5 border-bottom rounded-top-3 border-primary-subtle  bg-light">
                             <div class="card-content-left">
                                 <h3 class="fw-bolder">今晚明晨</h3>
-                                <p class="temperature">15~22℃</p>
-                                <p class="feel">稍有寒意至舒適</p>
-                                <p class="rainy">降雨機率:10%</p>
+                                <p class="temperature m-0">
+                                    ${minTemp.time[1].parameter.parameterName}~
+                                    ${maxTemp.time[1].parameter.parameterName}℃</p>
+                                <p class="feel m-0">${feel.time[1].parameter.parameterName}</p>
+                                <p class="rainy">降雨機率: ${rain.time[1].parameter.parameterName}%</p>
                             </div>
-                            <div class="pic ms-2">
-                                <img src="../20231206/img/avatar.jpg" alt="" class="my-2" style="width: 130px;">
+                            <div class="pic ms-2 d-flex align-content-center">
+                                <img src="${changeImg(weather.time[1].parameter.parameterName)}" alt="${changeImg(weather.time[1].parameter.parameterName)}"  style="height: 90px;">
                             </div>
                         </div>
-                        <div class="card-content d-flex gap-5 mb-3 px-5 py-3 border-5 border-bottom rounded-top-3 border-primary-subtle bg-light">
+                        <div class="card-content d-flex gap-5 mb-3 mb-3 px-5 py-3 border-5 border-bottom rounded-top-3 border-primary-subtle  bg-light">
                             <div class="card-content-left">
                                 <h3 class="fw-bolder">明日白天</h3>
-                                <p class="temperature">15~22℃</p>
-                                <p class="feel">舒適</p>
-                                <p class="rainy">降雨機率:10%</p>
+                                <p class="temperature m-0">
+                                    ${minTemp.time[2].parameter.parameterName}~
+                                    ${maxTemp.time[2].parameter.parameterName}℃</p>
+                                <p class="feel m-0">${feel.time[2].parameter.parameterName}</p>
+                                <p class="rainy">降雨機率: ${rain.time[2].parameter.parameterName}%</p>
                             </div>
-                            <div class="pic ms-2">
-                                <img src="../20231206/img/avatar.jpg" alt="" class="mt-3" style="width: 130px;">
+                            <div class="pic ms-2 d-flex align-content-center">
+                                <img src="${changeImg(weather.time[2].parameter.parameterName)}" alt="${changeImg(weather.time[2].parameter.parameterName)}"  style="height: 90px;">
                             </div>
                         </div>
                     </div>
                     `;
-                }
+                };
             });
-        }
+        };
+
+        // fn 換圖片
+        function changeImg(index) {
+                let change;
+                let imgArr = [
+                    './img/01.svg',
+                    './img/02.svg',
+                    './img/05.svg',
+                    './img/09.svg',
+                    './img/10.svg',
+                    './img/13.svg',
+                ];
+                if (index.includes('晴天')) {
+                    change = imgArr[0];
+                } else if (index.includes('晴') && index.includes('多雲')) {
+                    change = imgArr[1];
+                } else if (index.includes('雨')) {
+                    change = imgArr[2];
+                } else if (index.includes('陰天')) {
+                    change = imgArr[3];
+                } else if(index.includes('陰') || index.includes('多雲')){
+                    change = imgArr[4];
+                }else{
+                    change = imgArr[5];
+                };
+
+
+                return change;
+        };
+
 
 
 
