--- a/20231207/weather-card-bootstrap.html
+++ b/20231207/weather-card-bootstrap.html
@@ -22,7 +22,7 @@
             background-color: #0cf !important;
         }
         .tab-pane{
-            background: linear-gradient(to top, #aaf, #0cf);
+            background: linear-gradient(to top, #88f, #aaf, #0cf);
         }
     </style>
 
@@ -137,7 +137,7 @@
                                 <p class="rainy">降雨機率: ${rain.time[0].parameter.parameterName}%</p>
                             </div>
                             <div class="pic ms-2 d-flex align-content-center">
-                                <img src="${changeImg(weather.time[0].parameter.parameterName)}" alt="${changeImg(weather.time[0].parameter.parameterName)}"  style="height: 90px;">
+                                <img src="${changeImg(weather.time[0].parameter.parameterName)}" alt="${changeImg(weather.time[0].parameter.parameterName)}"  style="width: 100px; height: 100px;">
                             </div>
                         </div>
                         <div class="card-content d-flex gap-5 mb-3 mb-3 px-5 py-3 border-5 border-bottom rounded-top-3 border-primary-subtle  bg-light">
@@ -150,7 +150,7 @@
                                 <p class="rainy">降雨機率: ${rain.time[1].parameter.parameterName}%</p>
                             </div>
                             <div class="pic ms-2 d-flex align-content-center">
-                                <img src="${changeImg(weather.time[1].parameter.parameterName)}" alt="${changeImg(weather.time[1].parameter.parameterName)}"  style="height: 90px;">
+                                <img src="${changeImg(weather.time[1].parameter.parameterName)}" alt="${changeImg(weather.time[1].parameter.parameterName)}"  style="width: 100px; height: 100px;">
                             </div>
                         </div>
                         <div class="card-content d-flex gap-5 mb-3 mb-3 px-5 py-3 border-5 border-bottom rounded-top-3 border-primary-subtle  bg-light">
@@ -163,7 +163,7 @@
                                 <p class="rainy">降雨機率: ${rain.time[2].parameter.parameterName}%</p>
                             </div>
                             <div class="pic ms-2 d-flex align-content-center">
-                                <img src="${changeImg(weather.time[2].parameter.parameterName)}" alt="${changeImg(weather.time[2].parameter.parameterName)}"  style="height: 90px;">
+                                <img src="${changeImg(weather.time[2].parameter.parameterName)}" alt="${changeImg(weather.time[2].parameter.parameterName)}"  style="width: 100px; height: 100px;">
                             </div>
                         </div>
                     </div>
