--- a/20231211/modal.html
+++ b/20231211/modal.html
@@ -17,7 +17,7 @@
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
         Launch demo modal
     </button>
-    <!-- Button trigger modal -->
+    <!-- verticsl center modal -->
     <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#verticalCenter">
         vertical-center
     </button>           
