--- a/20231211/lax.html
+++ b/20231211/lax.html
@@ -15,18 +15,18 @@
             height: 3000px;
         }
 
-        .pesudo{
+        .pesudo {
             width: 100%;
             height: 50vh;
             background-color: #f2f2f2;
             border: 2px solid #000;
         }
-        
-        .pesudo:nth-of-type(2n + 1){
+
+        .pesudo:nth-of-type(2n + 1) {
             background-color: #faa;
         }
 
-        .page-wrap{
+        .page-wrap {
             width: 100%;
             height: 50vh;
         }
@@ -40,13 +40,8 @@
             text-align: center;
             line-height: 200px;
             /* position: fixed; */
-            
+
         }
-
-
-
-
-
     </style>
 </head>
 
@@ -79,7 +74,12 @@
                         // Y 座標
                         ["elInY", "elCenterY", "elOutY"],
                         // X 座標
-                        [0, 'screenWidth/2', 'screenWidth'],
+                        // RWD效果
+                        {
+                            500: [0, 'screenWidth/2', 'screenWidth'],
+                            900: [0, 'screenWidth/2', 'screenWidth'],
+                            1400: [0, 'screenWidth/2', 'screenWidth'],
+                        },
                     ],
                     rotate: [
                         // Y 座標
@@ -87,6 +87,18 @@
                         // X 座標
                         [0, 'screenWidth/2', 'screenWidth'],
                     ],
+                    scale: [
+                        // Y 座標
+                        ["elInY", "elCenterY", "elOutY"],
+                        // X 座標
+                        [0, 2, 4],
+                    ],
+                    opacity: [
+                        // Y 座標
+                        ["elInY", "elCenterY", "elOutY"],
+                        // X 座標
+                        [1, 0.5, 1],
+                    ]
                 },
 
             })
